统一异常处理及数据交换格式

--- a/ngfrontend/src/app/components/commit/commit.component.css
+++ b/ngfrontend/src/app/components/commit/commit.component.css
@@ -8,3 +8,9 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
+.ng-valid[required], ng-valid.required{
+    border-left: 5px solid #42A948
+}
+.ng-invalid:not(form){
+    border-left: 5px solid #A94442
+}
