--- a/ngfrontend/src/app/components/scratch/scratch.component.html
+++ b/ngfrontend/src/app/components/scratch/scratch.component.html
@@ -3,7 +3,7 @@
     <div class="col-6">
       <div class="container-fluid">
         <div class="row">
-          <h5>请输入URL种子<span class="text-light">目前只支持中关村URL</span></h5>
+          <h5>请输入URL种子</h5>
         </div>
         <div class="row">
           <form class="w-100">
