--- a/ngfrontend/src/app/components/commit/commit.component.html
+++ b/ngfrontend/src/app/components/commit/commit.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
       <label for="brand">品牌：</label>
-      <input type="text" class="form-control" id="brand" name="brand" [(ngModel)]="model.brand" required />
+      <input type="text" class="form-control" id="brand" name="brand" [(ngModel)]="model.brand" required/>
     </div>
     <div class="form-group">
       <label for="price">价格：(RMB)</label>
@@ -16,24 +16,24 @@
     </div>
     <div class="form-group">
       <label for="img">图片：</label>
-      <input #file type="file" class="form-control" id="img" name="img" [(ngModel)]="model.img" />
+      <input #file type="file" class="form-control" id="img" name="img" [(ngModel)]="model.img" required/>
     </div>
     <div class="form-group">
       <label for="type">手机类型：</label>
-      <input type="text" class="form-control" id="type" name="type" [(ngModel)]="model.type" />
+      <input type="text" class="form-control" id="type" name="type" [(ngModel)]="model.type" required />
     </div>
     <div class="form-group">
       <label for="os">操作系统</label>
-      <input type="text" class="form-control" id="os" name="os" [(ngModel)]="model.os" />
+      <input type="text" class="form-control" id="os" name="os" [(ngModel)]="model.os" required />
     </div>
     <div class="form-group">
       <label for="cpu">CPU：</label>
-      <input type="text" class="form-control" id="cpu" name="cpu" [(ngModel)]="model.cpu" />
+      <input type="text" class="form-control" id="cpu" name="cpu" [(ngModel)]="model.cpu" required />
     </div>
     <div class="form-group">
       <label for="size">尺寸：</label>
-      <input type="text" class="form-control" id="size" name="size" [(ngModel)]="model.size" />
+      <input type="text" class="form-control" id="size" name="size" [(ngModel)]="model.size" required />
     </div>
-    <button type="submit" (click)="commit()" class="btn btn-primary">提交</button>
+    <button type="submit" (ngSubmit)="commit()" class="btn btn-primary" [disabled]="!inputForm.form.valid">提交</button>
   </form>
 </div>
