Product添加id字段，每次索引前通过AtomicInteger设置id值+1,添加AbstractElasticPipeline复用代码

--- a/ngfrontend/src/app/components/search/search.component.html
+++ b/ngfrontend/src/app/components/search/search.component.html
@@ -6,8 +6,8 @@
   </div>
   <div class="row">
     <div class="col min-size text-center">
-          <input class="full w-50" #input type="text"/>&nbsp;
-          <button class="btn btn-primary border-0 w-25" (click)="search(input.value)">搜索</button>
+          <input class="full w-50" type="text" [(ngModel)]="query"/>&nbsp;
+          <button class="btn btn-primary border-0 w-25" (click)="search()">搜索</button>
     </div>
   </div>
 </div>
